--- a/hackathon-practice2.0/src/app/login/login.component.html
+++ b/hackathon-practice2.0/src/app/login/login.component.html
@@ -6,7 +6,7 @@
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title">IPF LOGIN PAGE</span>
+      <span class="mdl-layout-title">IPF LOGIN </span>
     </div>
   </header>
 </div>
